@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180616"
-#define public MagickPackageReleaseDate "snapshot-20180616"
+#define public MagickPackageVersionAddendum ".020180617"
+#define public MagickPackageReleaseDate "snapshot-20180617"
