@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2018-06-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/png.c (ReadPNGImage): Detect EOF when reading
+magic_number.  Fixes oss-fuzz 8944
+&quot;graphicsmagick/coder_PNG_fuzzer: Use-of-uninitialized-value in
+ReadPNGImage&quot;.  (Credit to OSS-Fuzz)</li>
+</ul>
+</blockquote>
 <p>2018-06-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
