@@ -1,3 +1,10 @@
+2018-06-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/png.c (ReadPNGImage): Detect EOF when reading
+	magic_number.  Fixes oss-fuzz 8944
+	"graphicsmagick/coder_PNG_fuzzer: Use-of-uninitialized-value in
+	ReadPNGImage".  (Credit to OSS-Fuzz)
+
 2018-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tiff.c (ReadTIFFImage): Re-structure exception reporting
